Mon Oct 28 14:098:24 UTC 2013  Marijke Hengstmengel  <MHengstmengel.remedy.nl>

        * docs/CIAO_android_port.html:
        Description setup CIAO Android port.


Wed Oct 23 08:48:24 UTC 2013  Marijke Hengstmengel  <MHengstmengel.remedy.nl>

        * examples/Hello/Receiver/Hello_Receiver_exec.cpp:

        * examples/Hello/descriptors/run_test.pl:

        * CIAO/examples/ciao_android.lst:
        Changes for ANDROID port 
          commit 43a2b2dfd3cc68ed5c30f4d8994a36183d972202
          Author: Marijke Hengstmengel <MHengstmengel@remedy.nl>
          Date:   Wed Oct 16 12:40:58 2013 +0200

                  * CIAO/examples/ciao_android.lst:
                  List tests running on CIAO Android port.

          commit ac22da3990acafaa9e5c2e9ddf8fc08a8e86f2b0
          Author: Marijke Hengstmengel <MHengstmengel@remedy.nl>
          Date:   Tue Oct 15 15:22:58 2013 +0200

                  Made perl script ready for running on two different targets:
                  local host and remote android target
                  * CIAO/examples/Hello/descriptors/run_test.pl:

          commit eb9626a86511c55e5d46a65a260240af6103f8e4
          Author: Marijke Hengstmengel <MHengstmengel@remedy.nl>
          Date:   Thu Oct 3 10:19:06 2013 +0200

                  * CIAO/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
                  Added extra debug info


Tue Oct  8 12:39:51 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Reduced number of steps for which we use cygwin

Mon Oct  7 14:55:11 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Added note that paths in environment variables shouldn't use
          double quotes

Mon Oct  7 13:50:49 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Corrected flag for x86_64
