@@ -1,3 +1,8 @@
+Mon Nov  4 14:13:28 UTC 2013  Marijke Hengstmengel  <MHengstmengel@remedy.nl>
+
+        * docs/CIAO_android_port.html:
+        Added environment variables
+
 Mon Oct 28 14:098:24 UTC 2013  Marijke Hengstmengel  <MHengstmengel.remedy.nl>
 
         * docs/CIAO_android_port.html:
@@ -11,7 +16,7 @@ Wed Oct 23 08:48:24 UTC 2013  Marijke Hengstmengel  <MHengstmengel.remedy.nl>
         * examples/Hello/descriptors/run_test.pl:
 
         * CIAO/examples/ciao_android.lst:
-        Changes for ANDROID port 
+        Changes for ANDROID port
           commit 43a2b2dfd3cc68ed5c30f4d8994a36183d972202
           Author: Marijke Hengstmengel <MHengstmengel@remedy.nl>
           Date:   Wed Oct 16 12:40:58 2013 +0200
